--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -1,6 +1,6 @@
 body {
-	background: #2C3E50;
-	color: #ECF0F1;
-	font: 14px/1.4 arial,helvetica,sans-serif;
+	background: #1B1D1E;
+	color: #5E6D70;
+	font: 14px/1.4 'Roboto', sans-serif;
 }
 
