--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -25,8 +25,12 @@ nav {
 	text-align: center;
 }
 
-nav ul li a {
+nav ul li {
 	display: inline-block;
+}
+
+nav ul li a {
+	display: block;
 	font-size: 1.4rem;
 	color: #C13B00;
 }
