--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -25,7 +25,7 @@ header, section {
 	margin: auto;
 }
 
-nav {
+header, nav {
 	text-align: center;
 }
 
@@ -37,6 +37,7 @@ nav ul li a {
 	display: block;
 	font-size: 1.4rem;
 	color: #C13B00;
+	margin: 0 20px;
 }
 
 nav ul li a:hover {
