--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -43,3 +43,9 @@ nav ul li a {
 nav ul li a:hover {
 	color: #FF6600;
 }
+
+section#form {
+	margin-top: 30px;
+	padding: 30px;
+	border: 3px solid #424E4F;
+}
