--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-	color: #A3BDC2;
+	color: #8FA6AB;
 	font-size: 3rem;
 	margin: 30px 0;
 }
@@ -50,4 +50,9 @@ section#form {
 	margin-top: 30px;
 	padding: 30px;
 	border: 3px solid #424E4F;
+}
+
+section#news, section#projects, section#testimonials {
+	margin-top: 30px;
+	background: #292C2E;
 }
