--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -46,9 +46,12 @@ nav ul li a:hover {
 	color: #FF6600;
 }
 
+section {
+	padding: 30px;
+}
+
 section#form {
 	margin-top: 30px;
-	padding: 30px;
 	border: 3px solid #424E4F;
 }
 
