--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -62,6 +62,7 @@ section#news, section#projects, section#testimonials {
 
 article {
 	margin-top: 30px;
+	padding-bottom: 30px;
 	border-bottom: 1px solid #424E4F;
 }
 
