--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -84,4 +84,12 @@ input, textarea {
 	nav ul li {
 		display: inline-block;
 	}
+
+	label {
+		width: calc(100% / 3);
+	}
+
+	label:nth-last-child {
+		width: 100%;
+	}
 }
