--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -87,9 +87,10 @@ input, textarea {
 
 	label {
 		width: calc(100% / 3);
+		float: left;
 	}
 
-	label:nth-last-child {
+	label.textbox {
 		width: 100%;
 	}
 }
