--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -45,6 +45,13 @@ nav ul li a:hover {
 
 section {
 	padding: 30px;
+	overflow: auto;
+}
+
+section button::before {
+	content: "";
+	display: table-cell;
+	clear: both;
 }
 
 section#form {
