--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -48,7 +48,7 @@ section {
 	overflow: auto;
 }
 
-section button::before {
+section button::after {
 	content: "";
 	display: table-cell;
 	clear: both;
@@ -86,6 +86,12 @@ input, textarea {
 	margin-top: 7.5px;
 	width: 100%;
 	padding: 15px;
+}
+
+label.textbox::after {
+	content: "";
+	display: table-cell;
+	clear: both;
 }
 
 @media screen and (min-width: 768px) {
