--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -59,7 +59,7 @@ section#form {
 	border: 3px solid #424E4F;
 }
 
-section#news, section#projects, section#testimonials {
+section.content {
 	margin-top: 30px;
 	background: #292C2E;
 }
