--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -2,12 +2,13 @@ body {
 	background: #1B1D1E;
 	color: #5E6D70;
 	font: 14px/1.4 'Roboto', sans-serif;
+	margin: 30px 0;
 }
 
 h1 {
 	color: #8FA6AB;
 	font-size: 3rem;
-	margin: 30px 0;
+	margin-bottom: 30px;
 }
 
 h2 {
