--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -85,8 +85,14 @@ input, textarea {
 
 button {
 	border: 3px solid #C13B00;
+	color: #C13B00;
 	padding: 15px;
 	cursor: pointer;
+}
+
+button:hover {
+	background: #C13B00;
+	color: #1B1D1E;
 }
 
 @media screen and (min-width: 768px) {
