--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -84,6 +84,8 @@ input, textarea {
 }
 
 button {
+	display: inline-block;
+	padding: 0 15px;
 	border: 3px solid #C13B00;
 	color: #C13B00;
 	padding: 15px;
