--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -85,10 +85,9 @@ input, textarea {
 
 button {
 	display: inline-block;
-	padding: 0 15px;
+	padding: 15px 30px;
 	border: 3px solid #C13B00;
 	color: #C13B00;
-	padding: 15px;
 	cursor: pointer;
 	font-weight: 700;
 	background: transparent;
