--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -83,7 +83,7 @@ input, textarea {
 	padding: 15px;
 }
 
-button {
+section form button {
 	display: inline-block;
 	padding: 15px 30px;
 	border: 3px solid #C13B00;
