--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -92,6 +92,7 @@ section form button {
 	font-weight: 700;
 	background: transparent;
 	text-transform: uppercase;
+	font-size: 1.1rem;
 }
 
 section form button:hover {
