--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -93,6 +93,7 @@ section form button {
 	background: transparent;
 	text-transform: uppercase;
 	font-size: 1.1rem;
+	margin-top: 15px;
 }
 
 section form button:hover {
