--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -94,6 +94,7 @@ section form button {
 	text-transform: uppercase;
 	font-size: 1.1rem;
 	margin-top: 15px;
+	width: 100%;
 }
 
 section form button:hover {
@@ -127,6 +128,6 @@ section form button:hover {
 	}
 
 	section form button {
-		display: inline-block;
+		width: 300px;
 	}
 }
