--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -102,6 +102,19 @@ section form button:hover {
 	color: #1B1D1E;
 }
 
+article {
+	position: relative;
+}
+
+article button {
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	padding: 15px;
+	background: transparent;
+	color: red;
+}
+
 @media screen and (min-width: 768px) {
 	nav ul li {
 		display: inline-block;
