--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -110,9 +110,10 @@ article button {
 	position: absolute;
 	top: 15px;
 	right: 15px;
-	padding: 15px;
+	padding: 5px 10px;
 	background: transparent;
 	color: red;
+	border: 2px solid red;
 }
 
 @media screen and (min-width: 768px) {
