--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -113,7 +113,8 @@ article button {
 	padding: 5px 10px;
 	background: transparent;
 	color: red;
-	border: 2px solid red;
+	font-size: 2rem;
+	border: 0;
 }
 
 @media screen and (min-width: 768px) {
