--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -115,6 +115,16 @@ article button {
 	color: red;
 	font-size: 2rem;
 	border: 0;
+	cursor: pointer;
+}
+
+article button:hover {
+	background: red;
+	border-radius: 50%;
+}
+
+article button:focus {
+	border: 0;
 }
 
 @media screen and (min-width: 768px) {
