--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -110,7 +110,7 @@ article button {
 	position: absolute;
 	top: 15px;
 	right: 15px;
-	padding: 8px 8px;
+	padding: 0 8px;
 	background: transparent;
 	color: #cc0000;
 	font-size: 2rem;
