--- a/views-app/css/main.css
+++ b/views-app/css/main.css
@@ -127,6 +127,11 @@ article button:focus {
 	border: 0;
 }
 
+article .post-content, article .description, article .testimonial {
+	margin-top: 15px;
+	font-size: 1.1rem;
+}
+
 @media screen and (min-width: 768px) {
 	nav ul li {
 		display: inline-block;
